tests/neg/i11226.check
-- Error: tests/neg/i11226.scala:13:36 ---------------------------------------------------------------------------------
13 |  def test(a: ActorRef): Unit = bus.unsubscribe(a) // error
   |                                    ^
   |               Cannot resolve reference to type (Unsubscriber.this.bus : ManagedActorClassification).Subscriber.
   |               Subscriber exists as a member of the self type ActorEventBus of trait ManagedActorClassification
   |               but it cannot be referenced from a scope that does not extend that trait.
